# dxfeed-c-api

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .lgtm.yml  CMakeLists.txt  CMakeSettings.json  DXFeed.cpp  DXFeed.def  DXFeed.h  DXFeed.sln  DXFeed.vcproj  DXFeed.vcxproj  DXFeed.vcxproj.filters  DXFeed_64.def  DXFeedd.def  DXFeedd_64.def  Makefile  Makefile.aix  Makefile.aix.xlc  README.md  ReleaseNotes.txt  binaries_delivery.bat  build.bat  build.sh  dxfeed-api-config.sample.toml  make_ci.sh  make_package.bat  make_package.sh  source_code_delivery.bat
.github/: BUILD.md  README.md
.github/workflows/: codeql-analysis.yml  daily-build-check.yml  github-ci-pull-req.yml  github-ci-test.yml  github-ci.yml
docs/: DXFeed Manual.odt  Doxyfile  Doxyfile.release
docs/assets/: footer.html
include/: APITypes.h  AdvMemory.h  DXErrorCodes.h  DXErrorHandling.h  DXFeed.h  DXMemory.h  DXSubsystemRoster.h  DXTypes.h  ErrorReport.h  EventData.h  PrimitiveTypes.h  RecordData.h  dxfeed.h
include/pthreads/: pthread.h  sched.h
lib/: pthreadVC2.lib  pthreadVC2d.lib
samples/CandleSample/: CMakeLists.txt  CandleSample.c  CandleSample.vcxproj  CandleSample.vcxproj.filters
samples/CommandLineSample/: CMakeLists.txt  CommandLineSample.c  CommandLineSample.vcxproj  CommandLineSample.vcxproj.filters
samples/FullOrderBookSample/: CMakeLists.txt  FullOrderBookSample.c  FullOrderBookSample.vcxproj  FullOrderBookSample.vcxproj.filters
samples/IncSnapshotConsoleSample/: CMakeLists.txt  IncSnapshotConsoleSample.c  IncSnapshotConsoleSample.vcxproj.filters
samples/PriceLevelBookSample/: CMakeLists.txt  PriceLevelBookSample.c  PriceLevelBookSample.vcxproj.filters
samples/PriceLevelBookSample2/: CMakeLists.txt  PriceLevelBookSample2.c  PriceLevelBookSample2.vcxproj  PriceLevelBookSample2.vcxproj.filters
samples/RegionalBookSample/: CMakeLists.txt  RegionalBookSample.c  RegionalBookSample.vcxproj
samples/SnapshotConsoleSample/: CMakeLists.txt  SnapshotConsoleSample.c  SnapshotConsoleSample.vcxproj.filters
scripts/: FullTest.args  check_build.bat  check_build.sh  combine_package.bat  combine_package.sh  run_test.bat  run_test.sh  tests.list
src/: AddressesManager.cpp  AddressesManager.h  AddressesManager.hpp  BinaryQTPComposer.cpp  BinaryQTPComposer.h  BinaryQTPComposer.hpp  BinaryQTPParser.cpp  BinaryQTPParser.h  BinaryQTPParser.hpp  BufferedIOCommon.c  BufferedIOCommon.h  BufferedInput.c  BufferedInput.h  BufferedOutput.c  BufferedOutput.h  CMakeLists.txt  Candle.c  Candle.h  ClientMessageProcessor.c  ClientMessageProcessor.h  Configuration.cpp  Configuration.h  Configuration.hpp  ConfigurationDeserializer.c  ConfigurationDeserializer.h  Connection.cpp  Connection.h  Connection.hpp  ConnectionContextData.c  ConnectionContextData.h  DXAddressParser.c  DXAddressParser.h  DXAlgorithms.c  DXAlgorithms.h  DXErrorCodes.c  DXErrorHandling.c  DXErrorHandling.h  DXFeed.c  DXFeed.def.in  DXFeed.rc  (+93 more)
src/Logger/: Logger.cpp  Logger.hpp  LoggerNG.h
src/Snapshot/: CMakeLists.txt  Snapshot.cpp  Snapshot.h  Snapshot.hpp  SnapshotChanges.hpp  SnapshotKey.hpp  SnapshotManager.hpp
src/Utils/: Hash.hpp
tests/: FullTest_dxfeed.bat  Makefile  QuoteTableTest_dxfeed.bat  Sample_dxfeed_TRADE_IBM.bat  tests.sln
tests/APITest/: APITest.c  APITest.vcproj  APITest.vcxproj  APITest.vcxproj.filters  CMakeLists.txt
tests/CandleSample/: CMakeLists.txt  CandleSample.c  CandleSample.vcxproj  Makefile
tests/CandleTest/: CMakeLists.txt  CandleTest.c  CandleTest.vcxproj  CandleTest.vcxproj.filters
tests/CommandLineSample/: CMakeLists.txt  CommandLineSample.c  CommandLineSample.vcproj  CommandLineSample.vcxproj  Makefile  (+2 more)
tests/MultipleSnapshotsConsoleSample/: CMakeLists.txt  MultipleSnapshotsConsoleSample.c  MultipleSnapshotsConsoleSample.vcxproj  MultipleSnapshotsConsoleSample.vcxproj.filters  test.save
tests/SampleTest/: CMakeLists.txt  SampleTest.c  SampleTest.vcproj  SampleTest.vcxproj  SampleTest.vcxproj.filters  build.bat
tests/UnitTests/: AddressParserTest.c  AddressParserTest.h  AlgorithmsTest.c  AlgorithmsTest.h  CMakeLists.txt  CandleTest.c  CandleTest.h  ConnectionTest.c  ConnectionTest.h  DXNetworkTests.c  DXNetworkTests.h  DataCollectionsTests.c  DataCollectionsTests.h  EventDynamicSubscriptionTest.cpp  EventDynamicSubscriptionTest.h  EventSubscriptionTest.c  EventSubscriptionTest.h  OrderSourceConfigurationTest.c  OrderSourceConfigurationTest.h  SnapshotTests.c  SnapshotTests.h  SnapshotUnitTests.c  TestHelper.c  TestHelper.h  UnitTests.c  UnitTests.vcproj  UnitTests.vcxproj  UnitTests.vcxproj.filters  build.bat
tests/UnitTests2/: CMakeLists.txt  SnapshotTest.cpp  StringUtilsTest.cpp  WideDecimalTest.cpp
tests/UnitTests2/src/: AddressParserTests.cpp
wrappers/COM/samples/C++/: CMakeLists.txt  DXFeedCOMC++Sample.cpp  DXFeedCOMC++Sample.vcproj  DXFeedCOMC++Sample.vcxproj  DXFeedCOMC++Sample.vcxproj.filters  Sinks.cpp  Sinks.h  TypeLibraryManager.cpp  TypeLibraryManager.h
wrappers/COM/src/: AuxAlgo.cpp  AuxAlgo.h  CMakeLists.txt  CandleSymbol.cpp  CandleSymbol.h  ClassFactory.cpp  Connection.cpp  Connection.h  ConnectionPointImpl.cpp  ConnectionPointImpl.h  DXFeedCOM.cpp  DXFeedCOM.def  DXFeedCOM.def.in  DXFeedCOM.idl  DXFeedCOM.vcproj  DXFeedCOM.vcxproj  DXFeedCOM.vcxproj.filters  DXFeedCOM_64.def  DXFeedCOM_64.def.in  DXFeedCOMd.def  DXFeedCOMd.def.in  DXFeedCOMd_64.def  DXFeedCOMd_64.def.in  DispatchImpl.cpp  DispatchImpl.h  EventFactory.cpp  EventFactory.h  Feed.cpp  Feed.h  LibraryLocker.cpp  LibraryLocker.h  NativeCandleSymbol.cpp  NativeCandleSymbol.h  SelfRegistration.cpp  Snapshot.cpp  Snapshot.h  Subscription.cpp  Subscription.h  TypeLibraryManager.cpp  TypeLibraryManager.h  (+3 more)
wrappers/cpp/: CMakeLists.txt
wrappers/cpp/samples/: CMakeLists.txt
wrappers/cpp/samples/ConnectionSample/: CMakeLists.txt  DXFeedCppWrapperConnectionSample.vcxproj  DXFeedCppWrapperConnectionSample.vcxproj.filters  main.cpp
wrappers/cpp/src/: CMakeLists.txt  Connection.cpp  Connection.hpp  Error.hpp  Event.cpp  Event.hpp  StringConverter.hpp  Subscription.cpp  Subscription.hpp  Utils.hpp
(+128 files in other folders)
